[package]
name = "rag-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
inline_colorization = "0.1.6"
langchain-rust = { version = "4.6.0", features = ["ollama", "surrealdb", "pdf-extract"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
tokio = { version = "1.44.1", features = ["full"] }
